--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.2.0",
+    "coffee-loader": "^1.0.1",
+    "coffeescript": "^2.7.0",
     "jquery": "^3.6.0",
+    "stimulus": "^3.1.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
